--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "personal_blog_app",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,5 +18,6 @@
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.6.2"
-  }
+  },
+  "description": ""
 }
