--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gitignore": "^0.7.0",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
-    "mongoose": "^8.6.2"
+    "mongoose": "^8.6.3"
   },
+  "devDependencies": {},
   "description": ""
 }
